fix(qwp): give pooled store-and-forward senders distinct slot ids (#53)